# convert_RPG_HATPRO_binaries_to_nc

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pylint.yml  python-package.yml
conversion_routines/: __init__.py  convert_rpg_bin.py  get_attributes.py  main.py  meta.py  rpg_bin.py  utils.py
example_data/binary/Y2020/M07/D15/: 200715.BLB  200715.BLH  200715.BRT  200715.CBH  200715.CMP.TPC  200715.DLY  200715.HKD  200715.HPC  200715.IRT  200715.IWV  200715.LWP  200715.MET  200715.STA  200715.TPB  200715.TPC
example_data/binary/Y2020/M07/D16/: 200716.BLB  200716.BLH  200716.BRT  200716.CBH  200716.CMP.TPC  200716.DLY  200716.HKD  200716.HPC  200716.IRT  200716.IWV  200716.LWP  200716.MET  200716.STA  200716.TPB  200716.TPC
example_data/nc/cbh/2020/07/: 20200715_cbh.nc  20200716_cbh.nc
example_data/nc/irt/2020/07/: 20200715_irt.nc  20200716_irt.nc
tests/: __init__.py  test_main.py
